Eighball app completed with random answer feature

--- a/EightBall/app/src/main/res/layout/activity_eight_ball.xml
+++ b/EightBall/app/src/main/res/layout/activity_eight_ball.xml
@@ -4,16 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="setShakeButtonClicked"
     tools:context=".EightBallActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/answerTextView"
+        android:layout_width="223dp"
+        android:layout_height="71dp"
+        android:layout_marginBottom="108dp"
+        android:layout_marginRight="16dp"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.546"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/questionEditText"
+        android:layout_width="216dp"
+        android:layout_height="68dp"
+        android:layout_marginLeft="31dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="37dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/question"
+        android:textAllCaps="true"
+        android:textStyle="bold|italic"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.479" />
+        tools:padding="@android:dimen/dialog_min_width_minor" />
+
+    <Button
+        android:id="@+id/shakeButton"
+        android:layout_width="379dp"
+        android:layout_height="72dp"
+        android:layout_marginBottom="112dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@color/colorAccent"
+        android:onClick="setShakeButtonClicked"
+        android:text="@string/btn_shake"
+        app:layout_constraintBottom_toTopOf="@+id/answerTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/questionEditText" />
 
 </android.support.constraint.ConstraintLayout>
