RPS game setup files

--- a/WordCounterWizard/app/src/main/res/layout/activity_word_counter_main.xml
+++ b/WordCounterWizard/app/src/main/res/layout/activity_word_counter_main.xml
@@ -24,8 +24,8 @@
         android:layout_width="352dp"
         android:layout_height="117dp"
         android:ems="10"
+        android:hint="@string/ent_txt"
         android:inputType="textMultiLine"
-        android:text="@string/ent_txt"
         app:layout_constraintBottom_toTopOf="@+id/AnswerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
