--- a/RockPaperScissorsGame/app/src/main/res/layout/activity_rps.xml
+++ b/RockPaperScissorsGame/app/src/main/res/layout/activity_rps.xml
@@ -7,53 +7,52 @@
     tools:context=".RPSActivity">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/scissorsButtonID"
         android:layout_width="100dp"
         android:layout_height="55dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginRight="24dp"
-        android:layout_marginStart="8dp"
+        android:onClick="onScissorsButtonIDClicked"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
         app:srcCompat="?android:attr/actionModeCutDrawable"
-        tools:layout_editor_absoluteY="41dp" />
+        tools:layout_editor_absoluteY="48dp" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/paperButtonID"
         android:layout_width="100dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginStart="32dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton"
-        app:layout_constraintStart_toEndOf="@+id/imageButton3"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:onClick="onPaperButtonIDClicked"
+        app:layout_constraintEnd_toStartOf="@+id/scissorsButtonID"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:srcCompat="?android:attr/actionModePasteDrawable"
-        tools:layout_editor_absoluteY="41dp" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="100dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_gallery"
-        tools:layout_editor_absoluteY="41dp" />
+        tools:layout_editor_absoluteY="48dp" />
 
     <TextView
         android:id="@+id/resultTextViewID"
         android:layout_width="294dp"
         android:layout_height="167dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:hint="@string/show_result"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="188dp"
-        tools:text="@string/show_result" />
+        android:text="@string/show_result"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/paperButtonID" />
+
+    <ImageButton
+        android:id="@+id/rockButtonID"
+        android:layout_width="100dp"
+        android:layout_height="55dp"
+        android:onClick="onRockButtonIDClicked"
+        app:srcCompat="@android:drawable/ic_menu_gallery"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="48dp" />
 
 </android.support.constraint.ConstraintLayout>
