--- a/WordCounterWizard/app/src/main/res/layout/activity_answer.xml
+++ b/WordCounterWizard/app/src/main/res/layout/activity_answer.xml
@@ -2,10 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WordCounterMainActivity">
+    tools:context=".AnswerActivity">
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -19,31 +18,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
 
-    <EditText
-        android:id="@+id/questionEditText"
-        android:layout_width="352dp"
-        android:layout_height="117dp"
-        android:ems="10"
-        android:hint="@string/ent_txt"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/AnswerButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/AnswerButton"
-        android:layout_width="352dp"
-        android:layout_height="wrap_content"
-        android:onClick="wordsCounterButtonClickedView"
-        android:text="@string/ans_btn"
+    <TextView
+        android:id="@+id/answerTextView"
+        android:layout_width="224dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/ans_txt"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/questionEditText" />
-
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
