--- a/TopMovies/app/src/main/res/layout/movie_list_item.xml
+++ b/TopMovies/app/src/main/res/layout/movie_list_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="onListItmeClick"
+    android:onClick="onListItemClick"
     >
 
     <TextView
@@ -24,11 +24,15 @@
     <TextView
         android:id="@+id/titleTextViewId"
         android:layout_width="wrap_content"
-        android:layout_height="22dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/rankingTextViewId"
         app:layout_constraintTop_toTopOf="parent" />
 
