--- a/proActiveSchedulerApp/app/src/main/res/layout/activity_to_do_list_main.xml
+++ b/proActiveSchedulerApp/app/src/main/res/layout/activity_to_do_list_main.xml
@@ -8,26 +8,33 @@
     tools:context=".ToDoListMainActivity">
 
     <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
+        android:id="@+id/homeHeadingTextViewId"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/heading_home_text"
+        android:textAllCaps="false"
+        android:textSize="36sp"
+        android:textStyle="bold|italic"
+        tools:layout_editor_absoluteX="8dp" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
         android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
+
+    <TextView
+        android:id="@+id/dateTextId"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:text="@string/dateTextId"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/homeHeadingTextViewId"
+        tools:layout_editor_absoluteX="8dp" />
 
 </android.support.constraint.ConstraintLayout>
