--- a/proActiveScheduler/app/src/main/res/layout/app_bar_to_do_list_main.xml
+++ b/proActiveScheduler/app/src/main/res/layout/app_bar_to_do_list_main.xml
@@ -20,7 +20,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_to_do_list_main" />
+    <include
+        layout="@layout/content_to_do_list_main"
+        app:layout_anchor="@+id/fab"
+        app:layout_anchorGravity="top|center" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -28,6 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="#43b53f"
+        app:elevation="7dp"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
