--- a/proActiveScheduler/app/src/main/res/layout/content_to_do_list_main.xml
+++ b/proActiveScheduler/app/src/main/res/layout/content_to_do_list_main.xml
@@ -8,13 +8,27 @@
     tools:context=".ToDoListMainActivity"
     tools:showIn="@layout/app_bar_to_do_list_main">
 
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/homeHeadingTextViewId"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/heading_home_text"
+        android:textAllCaps="false"
+        android:textSize="36sp"
+        android:textStyle="bold|italic"
+        tools:layout_editor_absoluteX="8dp" />
+
+
+    <TextView
+        android:id="@+id/dateTextId"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:text="@string/dateTextId"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/homeHeadingTextViewId"
+        tools:layout_editor_absoluteX="8dp" />
+
+
 
 </android.support.constraint.ConstraintLayout>
