--- a/proActiveScheduler/app/src/main/res/layout/activity_to_do_list_main.xml
+++ b/proActiveScheduler/app/src/main/res/layout/activity_to_do_list_main.xml
@@ -6,12 +6,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    tools:context=".ToDoListMainActivity">
+
+
+    <!-- As the main content view, the view below consumes the entire
+      space available using match_parent in both dimensions. -->
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:background="@android:color/white">
 
     <include
         layout="@layout/app_bar_to_do_list_main"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/list"
+            android:layout_weight="1"
+            android:layout_margin="5dp"/>
+
+        <ImageButton
+            android:id="@+id/fab_image_button"
+            android:layout_width="@dimen/fab_button_diameter"
+            android:layout_height="@dimen/fab_button_diameter"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/fab_button_margin_bottom"
+            android:layout_marginRight="@dimen/fab_button_margin_right"
+            android:background="@drawable/oval_ripple"
+            android:src="@mipmap/fab_ic_add"
+            android:tint="@android:color/white"
+            android:elevation="@dimen/elevation_low"
+            android:stateListAnimator="@anim/button_elevation"/>
+
+    </RelativeLayout>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -21,5 +52,7 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_to_do_list_main"
         app:menu="@menu/activity_to_do_list_main_drawer" />
+
+
 
 </android.support.v4.widget.DrawerLayout>
