--- a/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
+++ b/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
@@ -43,4 +43,14 @@
         app:layout_constraintTop_toBottomOf="@+id/headinTextViewId"
         tools:layout_editor_absoluteX="8dp" />
 
+    <ListView
+        android:id="@+id/listTaskId"
+        android:layout_width="368dp"
+        android:layout_height="301dp"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateTextId"
+        app:layout_constraintVertical_bias="0.506" />
+
 </android.support.constraint.ConstraintLayout>
