changed button label from Delete to Done

--- a/proActiveTaskScheduler/app/src/main/res/layout/row.xml
+++ b/proActiveTaskScheduler/app/src/main/res/layout/row.xml
@@ -31,7 +31,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:onClick="deleteTask"
-        android:text="DELETE"
+        android:text="Done!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/taskTitleId"
