--- a/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
+++ b/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/headinTextViewId"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -36,21 +36,26 @@
 
     <TextView
         android:id="@+id/dateTextId"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:text="@string/dateTextId"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/headinTextViewId"
-        tools:layout_editor_absoluteX="8dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headinTextViewId" />
 
     <ListView
         android:id="@+id/listTaskId"
-        android:layout_width="368dp"
-        android:layout_height="301dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="20dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTextId"
-        app:layout_constraintVertical_bias="0.506" />
+        app:layout_constraintTop_toBottomOf="@+id/dateTextId" />
 
 </android.support.constraint.ConstraintLayout>
