--- a/proActiveTaskScheduler/app/src/main/res/layout/row.xml
+++ b/proActiveTaskScheduler/app/src/main/res/layout/row.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="Example"
+        android:text="@string/listViewText"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete"
@@ -33,7 +33,8 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="8dp"
         android:onClick="deleteTask"
-        android:text="Done!"
+        android:text="@string/taskCompletedbtn"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/taskTitleId"
