--- a/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
+++ b/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:background="#e9e9e9"
         android:text="@string/heading_home_text"
         android:textSize="30sp"
         android:textStyle="bold|italic"
@@ -42,6 +43,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:background="#e9e9e9"
         android:text="@string/dateTextId"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
