--- a/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
+++ b/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
@@ -19,6 +19,7 @@
         android:text="@string/heading_home_text"
         android:textSize="30sp"
         android:textStyle="bold|italic"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,6 +45,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="#e9e9e9"
+        android:gravity="center"
         android:text="@string/dateTextId"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
