calendar view tested and fragments added for bottom navigation button, tested, need to fix home view as its inflating to other views

--- a/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
+++ b/proActiveTaskScheduler/app/src/main/res/layout/activity_task_main.xml
@@ -7,6 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".TaskMainActivity">
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/navigationId"/>
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigationId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#e9e9e9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/navigation" />
+
     <TextView
         android:id="@+id/headinTextViewId"
         android:layout_width="0dp"
@@ -16,25 +34,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="#e9e9e9"
+        android:gravity="center"
         android:text="@string/heading_home_text"
         android:textSize="30sp"
         android:textStyle="bold|italic"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
 
     <TextView
         android:id="@+id/dateTextId"
@@ -57,7 +64,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintBottom_toTopOf="@+id/navigationId"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateTextId" />
