--- a/proActiveTaskScheduler/app/src/main/res/menu/navigation.xml
+++ b/proActiveTaskScheduler/app/src/main/res/menu/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_homeId"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
