--- a/proActiveTaskScheduler/app/src/main/res/menu/navigation.xml
+++ b/proActiveTaskScheduler/app/src/main/res/menu/navigation.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/navigation_homeId"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+<item
+    android:id="@+id/navigation_homeId"
+    android:icon="@drawable/ic_home_black_24dp"
+    android:title="@string/title_home" />
 
-    <item
-        android:id="@+id/navigation_taskDetailId"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-    <item
-        android:id="@+id/navigation_calenderViewId"
-        android:icon="@drawable/ic_date_range_black_24dp"
-        android:title="@string/title_calenderview" />
+<item
+    android:id="@+id/navigation_taskDetailId"
+    android:icon="@drawable/ic_dashboard_black_24dp"
+    android:title="@string/title_dashboard" />
+<item
+    android:id="@+id/navigation_calenderViewId"
+    android:icon="@drawable/ic_date_range_black_24dp"
+    android:title="@string/title_calenderview" />
 
 </menu>
